--- a/Makefile.linux
+++ b/Makefile.linux
@@ -5,9 +5,9 @@ CC = gcc
 LD = gcc
 AR = ar -r
 
-CPP_FLAGS = -I. -I./linux
+CPP_FLAGS = -I.
 C_FLAGS = -Wall -Werror -fno-omit-frame-pointer -march=native -g
-LD_FLAGS = -L./output -lpthread
+LD_FLAGS = -L./output -ltinylib -lpthread
 
 TINYLIB = output/libtinylib.a
 
@@ -47,6 +47,10 @@ RTP_OBJS = \
 TEST_ASYNC_TASK_BIN = output/test_async_task
 TEST_ASYNC_TASK_OBJS = test/test_async_task.o
 
+# async_task in multi-thread
+TEST_MT_ASYNC_TASK_BIN = output/test_mt_async_task
+TEST_MT_ASYNC_TASK_OBJS = test/test_mt_async_task.o
+
 ## atomic
 TEST_ATOMIC_BIN = output/test_atomic
 TEST_ATOMIC_OBJS = test/test_atomic.o
@@ -58,6 +62,10 @@ TEST_LOG_OBJS = test/test_log.o
 ## loop_timer
 TEST_LOOP_TIMER_BIN = output/test_loop_timer
 TEST_LOOP_TIMER_OBJS = test/test_loop_timer.o
+
+# timer in multi-thread
+TEST_MT_TIMER_BIN = output/test_mt_timer
+TEST_MT_TIMER_OBJS = test/test_mt_timer.o
 
 ## md5
 TEST_MD5_BIN = output/test_md5
@@ -93,15 +101,17 @@ TEST_URL_OBJS = test/test_url.o
 
 .PHONY: all clean test
 
-all: tinylib
+all: $(TINYLIB)
 
-tinylib: $(NET_OBJS) $(RTP_OBJS) $(RTSP_OBJS) $(UTIL_OBJS)
+$(TINYLIB): $(NET_OBJS) $(RTP_OBJS) $(RTSP_OBJS) $(UTIL_OBJS)
 	$(AR) $(TINYLIB) $^
 
-test: tinylib $(TEST_ASYNC_TASK_OBJS) \
-              $(TEST_ATOMIC_OBJS) \
+test: $(TINYLIB) $(TEST_ASYNC_TASK_OBJS) \
+	      $(TEST_MT_ASYNC_TASK_OBJS) \
+	      $(TEST_ATOMIC_OBJS) \
 	      $(TEST_LOG_OBJS) \
 	      $(TEST_LOOP_TIMER_OBJS) \
+	      $(TEST_MT_TIMER_OBJS) \
 	      $(TEST_MD5_OBJS) \
 	      $(TEST_MSG_CODEC_OBJS) \
 	      $(TEST_RTSP_REQUEST_OBJS)  \
@@ -111,29 +121,34 @@ test: tinylib $(TEST_ASYNC_TASK_OBJS) \
 	      $(TEST_TCP_SERVER_OBJS) \
 	      $(TEST_TIME_WHEEL_OBJS) \
 	      $(TEST_URL_OBJS)
-	$(LD) $(TEST_ASYNC_TASK_OBJS) -o $(TEST_ASYNC_TASK_BIN) -ltinylib $(LD_FLAGS)
-	$(LD) $(TEST_ATOMIC_OBJS) -o $(TEST_ATOMIC_BIN) -ltinylib $(LD_FLAGS)
-	$(LD) $(TEST_LOG_OBJS) -o $(TEST_LOG_BIN) -ltinylib $(LD_FLAGS)
-	$(LD) $(TEST_LOOP_TIMER_OBJS) -o $(TEST_LOOP_TIMER_BIN) -ltinylib $(LD_FLAGS)
-	$(LD) $(TEST_MD5_OBJS) -o $(TEST_MD5_BIN) -ltinylib $(LD_FLAGS)
-	$(LD) $(TEST_MSG_CODEC_OBJS) -o $(TEST_MSG_CODEC_BIN) -ltinylib $(LD_FLAGS)
-	$(LD) $(TEST_RTSP_REQUEST_OBJS) -o $(TEST_RTSP_REQUEST_BIN) -ltinylib $(LD_FLAGS)
-	$(LD) $(TEST_RTSP_SERVER_OBJS) -o $(TEST_RTSP_SERVER_BIN) -ltinylib $(LD_FLAGS)
-	$(LD) $(TEST_SDP_OBJS) -o $(TEST_SDP_BIN) -ltinylib $(LD_FLAGS)
-	$(LD) $(TEST_TCP_CLIENT_OBJS) -o $(TEST_TCP_CLIENT_BIN) -ltinylib $(LD_FLAGS)
-	$(LD) $(TEST_TCP_SERVER_OBJS) -o $(TEST_TCP_SERVER_BIN) -ltinylib $(LD_FLAGS)
-	$(LD) $(TEST_TIME_WHEEL_OBJS) -o $(TEST_TIME_WHEEL_BIN) -ltinylib $(LD_FLAGS)
-	$(LD) $(TEST_URL_OBJS) -o $(TEST_URL_BIN) -ltinylib $(LD_FLAGS)
+	$(LD) $(TEST_ASYNC_TASK_OBJS) -o $(TEST_ASYNC_TASK_BIN) $(LD_FLAGS)
+	$(LD) $(TEST_MT_ASYNC_TASK_OBJS) -o $(TEST_MT_ASYNC_TASK_BIN) $(LD_FLAGS)
+	$(LD) $(TEST_ATOMIC_OBJS) -o $(TEST_ATOMIC_BIN) $(LD_FLAGS)
+	$(LD) $(TEST_LOG_OBJS) -o $(TEST_LOG_BIN) $(LD_FLAGS)
+	$(LD) $(TEST_LOOP_TIMER_OBJS) -o $(TEST_LOOP_TIMER_BIN) $(LD_FLAGS)
+	$(LD) $(TEST_MT_TIMER_OBJS) -o $(TEST_MT_TIMER_BIN) $(LD_FLAGS)
+	$(LD) $(TEST_MD5_OBJS) -o $(TEST_MD5_BIN) $(LD_FLAGS)
+	$(LD) $(TEST_MSG_CODEC_OBJS) -o $(TEST_MSG_CODEC_BIN) $(LD_FLAGS)
+	$(LD) $(TEST_RTSP_REQUEST_OBJS) -o $(TEST_RTSP_REQUEST_BIN) $(LD_FLAGS)
+	$(LD) $(TEST_RTSP_SERVER_OBJS) -o $(TEST_RTSP_SERVER_BIN) $(LD_FLAGS)
+	$(LD) $(TEST_SDP_OBJS) -o $(TEST_SDP_BIN) $(LD_FLAGS)
+	$(LD) $(TEST_TCP_CLIENT_OBJS) -o $(TEST_TCP_CLIENT_BIN) $(LD_FLAGS)
+	$(LD) $(TEST_TCP_SERVER_OBJS) -o $(TEST_TCP_SERVER_BIN) $(LD_FLAGS)
+	$(LD) $(TEST_TIME_WHEEL_OBJS) -o $(TEST_TIME_WHEEL_BIN) $(LD_FLAGS)
+	$(LD) $(TEST_URL_OBJS) -o $(TEST_URL_BIN) $(LD_FLAGS)
 
 %.o: %.c
 	$(CC) -c $^ -o $@ $(CPP_FLAGS) $(C_FLAGS)
 
 clean:
+	rm -f $(TINYLIB)
 	rm -f $(NET_OBJS) $(RTP_OBJS) $(RTSP_OBJS) $(UTIL_OBJS)
 	rm -f $(TEST_ASYNC_TASK_OBJS) $(TEST_ASYNC_TASK_BIN)
+	rm -f $(TEST_MT_ASYNC_TASK_OBJS) $(TEST_MT_ASYNC_TASK_BIN)
 	rm -f $(TEST_ATOMIC_OBJS) $(TEST_ATOMIC_BIN)
 	rm -f $(TEST_LOG_OBJS) $(TEST_LOG_BIN)
 	rm -f $(TEST_LOOP_TIMER_OBJS) $(TEST_LOOP_TIMER_BIN)
+	rm -f $(TEST_MT_TIMER_OBJS) $(TEST_MT_TIMER_BIN)
 	rm -f $(TEST_MD5_OBJS) $(TEST_MD5_BIN)
 	rm -f $(TEST_MSG_CODEC_OBJS) $(TEST_MSG_CODEC_BIN)
 	rm -f $(TEST_RTSP_REQUEST_OBJS) $(TEST_RTSP_REQUEST_BIN)
